Maj java code : quick apk decryption class+stressOut fonction (test ban)